2009-10-01  TOKI Yoshinori  <toki@freedom.ne.jp>

	* Rakefile: gemspec dependency.

2009-09-29  TOKI Yoshinori  <toki@freedom.ne.jp>

	* EXAMPLE: text to run example.

2009-09-16  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/validation.rb: invalid data encoding is always
	ascii-8bit.

2009-09-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/validation.rb: delete on fail at encoding validation.

	* lib/gluon/web.rb, lib/gluon/web/table.erb,
	lib/gluon/web/table.rb, lib/gluon/web/table_item.erb: table
	utility.

2009-09-07  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb, lib/gluon/rs.rb: a way to switch to
	other controller on response.

	* lib/gluon.rb, run/config.rb: compact declaration for
	memoization.

	* run/config.rb: access log.

	* lib/gluon/application.rb, lib/gluon/builder.rb, run/config.rb:
	logging.

2009-09-04  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb, lib/gluon/memoize.rb,
	lib/gluon/metainfo.rb: split.

2009-09-03  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/template.rb, run/config.rb: memoization for template
	engine.

	* lib/gluon/application.rb, lib/gluon/builder.rb: late build of
	application.

2009-09-02  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: Gluon::Memoization is class instances
	memoization. Gluon::SingleMemoization is single instance
	memoization.

2009-09-01  TOKI Yoshinori  <toki@freedom.ne.jp>

	* run/Rakefile, run/config.rb: session secret file is renamed from
	`seed' to `secret'.

	* Rakefile, run/Rakefile, run/config.rb: ENVIRONMENT of
	development and deployment can be used.

2009-08-31  TOKI Yoshinori  <toki@freedom.ne.jp>

	* Rakefile: task to make document.

	* lib/gluon/application.rb, lib/gluon/builder.rb:
	initialization-arguments for mounted controller is obsolete.
	initialization-arguments destroys implicit assumption that
	controller and URL are 1 couple.

	* lib/gluon/web/404.rb, lib/gluon/web/500.rb: obsolete files for