@@ -1,3 +1,8 @@
+2009-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/controller.rb: meta-info implementation is separated
+	from controller module.
+
 2009-10-01  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* Rakefile: gemspec dependency.
